--- a/src/assets/hero.css
+++ b/src/assets/hero.css
@@ -1,5 +1,7 @@
 .overlay{
     position: relative;
+    z-index: 10;
+    
 }
 .overlay::before{
     content: "";
@@ -10,5 +12,12 @@
     bottom: 0;
     background-color: black;
     opacity: 0.5;
+    z-index: -10;
    
+}
+
+@media(min-width:48rem){
+    .overlay::before{
+        opacity: 0.8;
+    }
 }
